# CASim

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
ext/: CMakeLists.txt
include/: casim.h  client.h  compute.h  renderer.h
src/: cl_window.c  client.c  instance.c  main.c
